# ai-geteway-test

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.github/workflows/: allure-report.yml  test.yml
config/: mock_config.yaml  test_config.yaml
docs/adr/: 0001-测试项目架构决策.md
e2e/: __init__.py  test_anthropic.py  test_chat.py  test_embedding.py  test_google.py  test_image.py  test_model_list.py  test_openai.py  test_responses.py
mock/: __init__.py  common_server.py
performance/: test_concurrency.py  test_latency.py  test_throughput.py  utils.py
tests/: test_mock_server.py
utils/: __init__.py  config_loader.py  http_client.py  logger.py
